fix align data view

--- a/web/bundles/lclc/cssh/style.css
+++ b/web/bundles/lclc/cssh/style.css
@@ -139,7 +139,6 @@ h5 {
   z-index: 4000;
   width: 100%;
   color: #026d77;
-  background-color: rgba(255, 255, 255, 0.5);
 }
 .text-spinner {
   text-align: center;
